--- a/templates/update.html
+++ b/templates/update.html
@@ -2,7 +2,8 @@
 {% block body %}
 
 <div class="container">
-    <form action="/update/<int:sno>" method="POST">
+    <form action="/update/{{ todo.sno }}" method="POST">
+
   <div class="mb-3">
     <h3><i>Update your todo</i></h3>
     <label for="title" class="form-label">ToDo Title</label>
@@ -15,5 +16,6 @@
   <button type="submit" class="btn btn-dark">Update</button>
 </form>
 </div>
+
 
 {% endblock body %}
